TURMERIC-1541: Findbugs fixes.