@@ -79,37 +79,37 @@ public class CassandraErrorLoggingHandlerTestIT extends CassandraTestHelper{
         logHandler.persistErrors(errorsToStore, serverName, srvcAdminName, opName, serverSide, consumerName, now);
 
         // now I need to retrieve the values. I use Hector for this.
-        ColumnSlice<Object, Object> errorColumnSlice = getColumnValues(kspace, "Errors", new Long(0), StringSerializer.get(),
+        ColumnSlice<Object, Object> errorColumnSlice = getColumnValues(kspace, "Errors",Long.valueOf(0), StringSerializer.get(),
                         StringSerializer.get(), "name", "category", "severity", "domain", "subDomain", "organization");
         assertValues(errorColumnSlice, "name", "TestErrorName", "organization", "TestOrganization", "domain",
                         "TestDomain", "subDomain", "TestSubdomain", "severity", "ERROR", "category", "APPLICATION");
 
-        ColumnSlice<Object, Object> longColumnSlice = getColumnValues(kspace, "Errors", new Long(0), StringSerializer.get(),
+        ColumnSlice<Object, Object> longColumnSlice = getColumnValues(kspace, "Errors", Long.valueOf(0), StringSerializer.get(),
                         LongSerializer.get(), "errorId");
-        assertValues(longColumnSlice, "errorId", new Long(0));
+        assertValues(longColumnSlice, "errorId",Long.valueOf(0));
 
         // now, assert the count cf - first the category one
         ColumnSlice<Object, Object> categoryCountColumnSlice = getColumnValues(kspace, "ErrorCountsByCategory",
                         "localhost-ServiceAdminName1-Operation1-APPLICATION", LongSerializer.get(),
-                        StringSerializer.get(), new Long(now));
+                        StringSerializer.get(), Long.valueOf(now));
         assertValues(categoryCountColumnSlice, now, "0-localhost-ServiceAdminName1-Operation1");
 
         // now, assert the count cf - all ops
         ColumnSlice<Object, Object> categoryCountAllOpsColumnSlice = getColumnValues(kspace, "ErrorCountsByCategory",
                         "localhost-ServiceAdminName1-All-APPLICATION", LongSerializer.get(), StringSerializer.get(),
-                        new Long(now));
+                        Long.valueOf(now));
         assertValues(categoryCountAllOpsColumnSlice, now, "0-localhost-ServiceAdminName1-Operation1");
 
         // now, assert the count cf - then the severity one
         ColumnSlice<Object, Object> severityCountColumnSlice = getColumnValues(kspace, "ErrorCountsBySeverity",
                         "localhost-ServiceAdminName1-Operation1-ERROR", LongSerializer.get(), StringSerializer.get(),
-                        new Long(now));
+                        Long.valueOf(now));
         assertValues(severityCountColumnSlice, now, "0-localhost-ServiceAdminName1-Operation1");
 
         // now, assert the count cf - all ops
         ColumnSlice<Object, Object> severityCountAllOpsColumnSlice = getColumnValues(kspace, "ErrorCountsBySeverity",
                         "localhost-ServiceAdminName1-All-ERROR", LongSerializer.get(), StringSerializer.get(),
-                        new Long(now));
+                        Long.valueOf(now));
         assertValues(severityCountAllOpsColumnSlice, now, "0-localhost-ServiceAdminName1-Operation1");
 
     }
